# shrew-cli

./: ARCHITECTURE.md  Cargo.toml  README.md
src/: main.rs
